# NLP-TUTORIAL

./: README.md  main.py  pyproject.toml  requirements.txt  text_classification.odp
class-1-regex/: regex_1.ipynb  regex_anchors-2.ipynb  regex_chracter-1.ipynb  regex_flags.ipynb  regex_group-4.ipynb  regex_special_character-3.ipynb  regex_splitting_data.ipynb  regex_testingipynb  regex_text.ipynb  sample.txt
class-2/: bow_vectorizer.pkl  data_cleaning.ipynb  pandas.ipynb  text_classification-bog.ipynb  text_classification_bbc_tf-idf.ipynb  text_classification_tfidf.ipynb  text_classifier_model.pkl
class-2-Bag-of-words/: ml_pipeline_sentiment.ipynb  stemming_lemmatization.ipynb  tokenization-1.ipynb
