[project]
name = "nlp-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=1.26.3",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "pprintpp>=0.4.0",
    "regex>=2024.11.6",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.5",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers>=4.51.3",
]
